--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 
     <body>
         <p align="center">
-            <h3>А это мой сайт, тут всякие штуки, наверное, будут</h3>
+            <h3>А это мой сайт, тут всякие штуки, наверное, будут.</h3>
         </p>
 
-        <p align="center">
-            <img src="big-floppa-meme.png" alt="Picture is a lie, forget about it"><br>
-        </p>
+        <h3>Галерея</h3>
+
+        <div>
+            <p align="center">Шлепа</p>
+        </div>
 
         <p align="center">
-            <a href="https://memepedia.ru/bolshoj-shlyopa/">Шлепка</a>
+            <img src="big-floppa-meme.png" alt="Picture is a lie, forget about it" height="287"><br>
         </p>
     </body>
 </html>
