Вынес галерею в отдельный раздел

--- a/index.html
+++ b/index.html
@@ -10,14 +10,7 @@
             <h3>А это мой сайт, тут всякие штуки, наверное, будут.</h3>
         </p>
 
-        <h3>Галерея</h3>
+        <a href="galary.html">Галерея</a>
 
-        <div>
-            <p align="center">Шлепа</p>
-        </div>
-
-        <p align="center">
-            <img src="big-floppa-meme.png" alt="Picture is a lie, forget about it" height="287"><br>
-        </p>
     </body>
 </html>
