Добавил раздел, доработал боковое меню

--- a/info.html
+++ b/info.html
@@ -2,12 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Каталог</title>
+    <title>О нас</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    <div>
-        <p align="Здесь пока пусто"></p>
-    </div>
+    <p align="center">Кто "мы" то блять, кто "мы"!? Я один сдесь!</p>
 </body>
 </html>
