--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Пирожки Главная</title>
+    <title>Главная</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
-    <img class="logo" width="4%" src="614f4837-f156-4ef9-96c4-4cc116b9fb4b.jpg" alt="The logo was not downloaded">
+    <div class="sidebar">
+        <a href="index.html"><img width="50%" src="cake.png" alt="The logo was not downloaded"></a>
+    </div>
     <div class="sidebar">
         <a display="block" href="index.html">Главная</a>
     </div>
     <div class="sidebar">
         <a display="block" href="catalog.html">Каталог</a>
+    </div>
+    <div class="sidebar">
+        <a display="block" href="info.html">О нас</a>
     </div>
 </body>
 </html>
