--- a/catalog.html
+++ b/catalog.html
@@ -6,8 +6,15 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    <div>
-        <p align="Здесь пока пусто"></p>
+    <div class="sidebar">
+        <a display="block" href="pirozhki.html">Пирожки</a>
     </div>
+    <div class="sidebar">
+        <a display="block" href="catalog.html">Булочки</a>
+    </div>
+    <div class="sidebar">
+        <a display="block" href="catalog.html">Крендельки</a>
+    </div>
+    
 </body>
 </html>
