--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <div class="sidebar">
-        <a href="index.html"><img width="50%" src="cake.png" alt="The logo was not downloaded"></a>
+    <div class="logo">
+        <a href="index.html"><img width="9%" src="cake.png" alt="The logo was not downloaded"></a>
     </div>
     <div class="sidebar">
         <a display="block" href="index.html">Главная</a>
