Добавил штук всяких

--- a/catalog.html
+++ b/catalog.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Каталог</title>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
     <div class="sidebar">
-        <a display="block" href="pirozhki.html">Пирожки</a>
+      <a display="block" href="pirozhki.html">Пирожки</a>
     </div>
     <div class="sidebar">
-        <a display="block" href="catalog.html">Булочки</a>
+      <a display="block" href="catalog.html">Булочки</a>
     </div>
     <div class="sidebar">
-        <a display="block" href="catalog.html">Крендельки</a>
+      <a display="block" href="catalog.html">Крендельки</a>
     </div>
-    
-</body>
+  </body>
 </html>
