--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Главная</title>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
-</head>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<body>
+  <body>
     <div class="logo">
-        <a href="index.html"><img width="9%" src="cake.png" alt="The logo was not downloaded"></a>
+      <a href="index.html"
+        ><img width="9%" src="cake.png" alt="The logo was not downloaded"
+      /></a>
     </div>
     <div class="sidebar">
-        <a display="block" href="index.html">Главная</a>
+      <a display="block" href="index.html">Главная</a>
     </div>
     <div class="sidebar">
-        <a display="block" href="catalog.html">Каталог</a>
+      <a display="block" href="catalog.html">Каталог</a>
     </div>
     <div class="sidebar">
-        <a display="block" href="info.html">О нас</a>
+      <a display="block" href="info.html">О нас</a>
     </div>
-</body>
+  </body>
 </html>
