--- a/info.html
+++ b/info.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>О нас</title>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
     <p align="center">Кто "мы" то блять, кто "мы"!? Я один сдесь!</p>
-</body>
+  </body>
 </html>
